fixing chat input firefox truncate metadata titles

--- a/static/sass/site/style/_global.sass
+++ b/static/sass/site/style/_global.sass
@@ -33,7 +33,7 @@ body, html
 
 // PWA
 body
-  //-webkit-user-select: none
+  -webkit-user-select: text
   -webkit-tap-highlight-color: transparent
   -webkit-touch-callout: none
 
